# cmake-test

./: .gitignore  CMakeLists.txt
mygtest/: CMakeLists.txt
